really fixed navbar background on small device

--- a/resources/styles/theme/_footer.scss
+++ b/resources/styles/theme/_footer.scss
@@ -4,6 +4,7 @@ footer{
   a,p,h1,h2,h3,h4,h5,h6, span {
     color: $light-gray;
   }
+  min-height: 20vh;
 }
 footer ul {
   list-style: none;
