--- a/resources/styles/theme/_generic.wordpress.scss
+++ b/resources/styles/theme/_generic.wordpress.scss
@@ -4,6 +4,10 @@
     Feel free to modify or outright delete these default styles.
 \* ------------------------------------------------------------ */
 
+#content-wrapper {
+  min-height: 80vh;
+}
+
 .alignnone,
 .alignleft,
 .alignright,
